--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "date-fns": "^2.29.3",
     "firebase": "^9.15.0",
     "react": "^18.2.0",
+    "react-date-picker": "^9.2.0",
     "react-dom": "^18.2.0",
     "react-export-table-to-excel": "^1.0.6",
     "react-redux": "^8.0.5",
